<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:iconSpaceReserved="false"
        android:summary="@string/sss_warning_summary"
        android:title="@string/sss_warning_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="dbg_dont_replace_dots"
        android:summary="@string/sss_dont_replace_dots_summary"
        android:title="@string/sss_dont_replace_dots_title"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:defaultValue="null"
        android:key="dbg_custom_install_create"
        android:summary="@string/sss_custom_install_create_summary"
        android:title="@string/sss_custom_install_create_title"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="dbg_use_installer_2"
        android:summary="@string/sss_use_installer_2_summary"
        android:title="@string/sss_use_installer_2_title"
        app:iconSpaceReserved="false" />

</PreferenceScreen>