<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:ignore="UselessParent"> <!-- It's not useless, it centers this RelativeLayout-->

        <ImageView
            android:id="@+id/iv_about_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:tint="?attr/colorAccent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_about_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_about_logo"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name_full"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/tv_about_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_about_app"
            android:layout_centerHorizontal="true"
            android:text="@string/about_author"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_about_author"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_about_source"
                style="@style/SAIMaterialButton"
                android:layout_margin="8dp"
                android:text="@string/about_source" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_about_licenses"
                style="@style/SAIMaterialButton"
                android:layout_margin="8dp"
                android:text="@string/about_licenses" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_about_donate"
                style="@style/SAIMaterialButton.Outlined"
                android:layout_margin="8dp"
                android:text="@string/about_donate"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>