<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_mi_entry_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_mi_entry_text"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/installer_miui_warning_title"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_mi_miui_ver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/tv_mi_entry_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/installer_miui_warning_message"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mi_entry_text"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_mi_open_dev_settings"
                style="@style/SAIMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/installer_miui_warning_open_dev_settings" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_mi_continue"
                style="@style/SAIMaterialButton.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/mi_continue" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
